objects/NFL_Schools__c.object
<CustomObject>
    <description>List of NFL schools for each district</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>To capture related account name</description>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>To hold Account type</description>
        <formula>TEXT( Account__r.AccountType__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NFL Schools</relationshipLabel>
        <relationshipName>NFL_Schools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annual_Survey__c</fullName>
        <label>Annual Survey</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Baseline_Survey__c</fullName>
        <label>Baseline Survey</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Champion_City__c</fullName>
        <label>Champion City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Champion_Email__c</fullName>
        <label>Champion Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Champion_Phone__c</fullName>
        <label>Champion Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Champion_State__c</fullName>
        <label>Champion State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Champion_Street__c</fullName>
        <label>Champion Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Champion_Zip__c</fullName>
        <label>Champion Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Champion__c</fullName>
        <label>Champion</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Club_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Club Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>NFL Schools</relationshipLabel>
        <relationshipName>NFL_Schools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Club__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Club</label>
        <referenceTo>Club__c</referenceTo>
        <relationshipLabel>NFL Schools</relationshipLabel>
        <relationshipName>NFL_Schools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FG_Scores_Entered_each_semester__c</fullName>
        <label>FG Scores Entered each semester</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FitnessGram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FitnessGram</label>
        <referenceTo>Fitness_Gram__c</referenceTo>
        <relationshipLabel>NFL Schools</relationshipLabel>
        <relationshipName>NFL_Schools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Free_and_Reduced_Lunch_Percentage__c</fullName>
        <label>Free and Reduced Lunch Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Grade_Levels__c</fullName>
        <label>Grade Levels</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Elementary</fullName>
                </value>
                <value>
                    <fullName>Middle</fullName>
                </value>
                <value>
                    <fullName>Intermediate</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Principal_Email__c</fullName>
        <label>Principal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Principal_Name__c</fullName>
        <label>Principal Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_Phone__c</fullName>
        <label>Principal Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>School_Id__c</fullName>
        <label>School Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Location__c</fullName>
        <label>School Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rural</fullName>
                </value>
                <value>
                    <fullName>Urban</fullName>
                </value>
                <value>
                    <fullName>Suburban</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Name__c</fullName>
        <label>School Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Phone__c</fullName>
        <label>School Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>School_Street__c</fullName>
        <label>School Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Type__c</fullName>
        <label>School Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Total__c</fullName>
        <label>Student Total</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>NFL School</label>
    <nameField>
        <displayFormat>NFL-{0000}</displayFormat>
        <label>NFL School Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NFL Schools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>